# educational-robot

./: .gitignore  README.md
CAD/: Base.FCStd  Body.FCStd  ControlBox.FCStd  ControlBoxAssembly.FCStd  HerkulexActuator.FCStd  STSActuator.FCStd  ToolMount.FCStd
CAD/Assemblies/: ControlBoxAssembly.FCStd  Robot-4-DOF.FCStd  Robot-5-DOF-V1.FCStd  Robot-5-DOF-V2.FCStd  Robot-6-DOF-V1.FCStd  Robot-6-DOF-V2.FCStd  Robot-6-DOF-V3.FCStd  Robot-6-DOF.FCStd
Kinematics/: ModelETS.ipynb  ModelURDF.ipynb  RobotWorkspace.ipynb  TrajectoryCartesianSpace.ipynb  TrajectoryJointSpace.ipynb  robot.urdf
Kinematics/.ipynb_checkpoints/: ModelURDF-checkpoint.ipynb  RobotWorkspace-checkpoint.ipynb  TrajectoryJointSpace-checkpoint.ipynb
STLs/: Base-Box.stl  Base-Bracket.stl  Base-Cover.stl  Body-90degree.stl  Body-90degreeCover.stl  Body-Spacer.stl  ControlBox-Box.stl  ControlBox-Cover.stl  HerkulexActuator-MotorRing.stl  HerkulexActuator-OutputRing.stl  STSActuator-MotorRing.stl  STSActuator-OutputRing.stl  ToolMount-GripperBracketHole.stl  ToolMount-MountHole.stl
Software/: app.py  pyproject.toml  robot.urdf  robot_arm_controller.py  test_api.py  test_sequence.json
Software/arduino_controller/: arduino_controller.ino
Software/robot_api/: sts_robot_api.py
Software/robot_arm/: __init__.py  constants.py  controller.py  driver.py  kinematics.py  models.py  transport.py
Software/robot_arm/gui/: app.py  tab_cartesian.py  tab_conn.py  tab_ctrl.py  tab_seq.py  tab_setup.py
